// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders before section when scrollIndex > 0 1`] = `
<div
  scrollIndex={10}
  style={
    Object {
      "height": "100px",
      "overflowY": "scroll",
    }
  }
>
  <div
    style={
      Object {
        "height": 1000,
      }
    }
  />
</div>
`;

exports[`renders empty list 1`] = `
<div
  style={
    Object {
      "height": "1000px",
      "overflowY": "scroll",
    }
  }
/>
`;
